Sat May 28 20:05:55 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 * newhidups, libhid, apc-hid:
   - fix typo error on offdelay vartable declaration
   - complete APC usages,
   - improve APC support (should work with BackUPS Pro, Back-UPS ES,
     Smart-UPS and BackUPS), but still lacks of shutdown on some models

 (John Stamp)

Thu May 26 12:17:55 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - newhidups, libhid: code formating, and documentation
 - libhid.usermap: add preliminary APC rules

Wed May 25 14:09:02 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - newhidups.8: remove the staleness information (not needed anymore),
   and add hotplug information.

Thu May 24 14:06:02 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - mge-hid.h: add forgotten Protection Center definition

Mon May 23 09:21:10 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - fentonups: complete the trace

 (Michel Bouissou) [Alioth Patch #301574]

Mon May 23 07:25:02 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - mge-hid.h: add low end (non backuped) outlet handling
 - libusb: rework a bit the debug trace on device opening

2.0.2-pre1

Wed May  4 07:09:02 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - bring testing release in sync with development release
 - bump release to 2.0.2-pre1

2.1.0:

Wed May  4 07:09:02 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - solis: new driver for Microsol units

   (Silvino B. Magalhaes) [Alioth Patch #301272]

Tue May  3 09:09:07 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 * fentonups:
   - fix a problem with establishing serial communication,
   - fix UNITEK Alpha 500iC model exposure,
   - add separate battery voltage scales to better determine charge
     percentage when on AC/charging
   - add a user-defined battery voltage under which the UPS is considered
     on "low battery" condition when running on battery ("lowbattvolt")

   (Michel Bouissou) [Alioth Patch #301574] 
