@@ -10,3 +10,4 @@ libhidups      0x0003      0x0463   0xffff    0x0000       0x0000       0x00    
 libhidups      0x0003      0x0463   0x0001    0x0000       0x0000       0x00         0x00            0x00            0x00            0x00               0x00               0x00000000
 # APC units
 libhidups      0x0003      0x051d   0x0002    0x0000       0x0000       0x00         0x00            0x00            0x00            0x00               0x00               0x00000000
+
